1.k8s_basic/2.multi_pod/nginx_replicaset.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: kukaeden
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: my-nginx
