1.k8s_basic/2.multi_pod/ingress_nginx.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
# aws lb -> ingress controller pod -> ingress -> service로의 라우팅

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: kukaeden
  annotations:
    # 여기서 "nginx"로 지정한 것은 이 Ingress가 NGINX 기반 Ingress Controller에 의해 처리된다는 의미
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번쨰 prefix제거

spec:
  rules:
    - host: server.kukaeden417.shop # 설정하려는 도메인 이름.
      http:
        paths:
          # - path: /
          - path: /kukaeden1/ #bradkim1으로 시작하는 모든 url요청을 nginx-service1로 라우팅한다는 정규표현식
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
        # - path: /bradkim2/ #bradkim2으로 시작하는 모든 url요청을 nginx-service2로 라우팅한다는 정규표현식
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: nginx-service2
        #       port:
        #         number: 80
